# juce-plugin-template

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_SUMMARY.txt  QUICK_START.md  README.md  SETUP.md
juce-template/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
mcp-server/: README.md  index.js  package-lock.json  package.json
